# lvgl_qt_demo

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.autosave  README.md  lv_drv_conf.h
